manifest-ingress/05-portfolio-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    kubernetes.io/ingress.className: "nginx"  
    cert-manager.io/cluster-issuer: cert-manager
spec:
  tls:
   - hosts:
       
  rules:
    - host: "portfolio.ejirolaureld.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 80
