manifest-ingress/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx          
    cert-manager.io/cluster-issuer: module.cert_manager.cluster_issuer_name   
spec:
  rules:
    - host: "grafana.ejirolaureld.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 80
