manifest-ingress/sockshop-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: "nginx"          
    cert-manager.io/cluster-issuer: cert-manager 
spec:
  rules:
    - host: "sockshop.ejirolaureld.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 8079
